# LearningEnglishWords

./: .travis.yml  CMakeLists.txt  README.md  install.sh  reinstall.sh
src/: CheckInput.h  Game.h  GameMenu.h  main.cpp
test/: install.sh  main_test.cpp  test_func.h
